# STed

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.old  Makefile.am  Makefile.in  README  README.jp  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in
contrib/: Makefile.am  Makefile.in
contrib/icon/: sted.xpm
contrib/timidity_interface/: README.interface  README.timidity_interface  TiMidity++-1.2.0.patch  TiMidity++-1.3.2.patch  interface_S.txt
doc/: FAQ  Makefile.am  Makefile.in  memo
doc/original_docs/: Makefile.am  Makefile.in  rested2m.doc  sted207m.his  sted_all.hed  tuitou.doc
doc/original_docs/sted207/: sc88.def  sted2.cnf  sted2.doc  sted2.his  sted2.hlp  sted2.man  sted207.hed  sted2def.doc
etc/: Makefile.am  Makefile.in  sted2.cnf.in
etc/deffile/: cm64.def  sc55.def  sc55mk2.def
po/: ChangeLog  Makefile.in.in  POTFILES.in  cat-id-tbl.c  ja.gmo  ja.po  sted2.pot
sted2/: Makefile.am  Makefile.in  assign.c  assign.h  cm6con.c  cm6con.h  defload.c  defload.h  disp.c  disp.h  edit.c  edit.h  edits.c  edits.h  exclu.c  exclu.h  file.c  file.h  graphic.c  graphic.h  key_sub.c  key_sub.h  machin.h  mkeyb.c  mkeyb.h  rcddef.h  record.c  record.h  redit.c  redit.h  score.c  score.h  select.c  select.h  sted.c  sted.h  sted3.h  track.c  track.h  trkset.c  (+4 more)
sted2/itor/: Makefile.am  Makefile.in  itor.c  rcddef.h  rcpdef.h  rcpfile.h  rcpstruct.h
sted2/sayleen/: Makefile.am  Makefile.in  rcp.h  rcptomid.c  version.h
sted2/sub/: Makefile.am  Makefile.in  basic.c  curses-local.h  curses.c  dos.c  dos.h  doslib.h  graph.c  graph.h  hprint.c  hprint.h  iocs.c  iocs_console.c  iocs_graph.c  iocs_key.c  iocs_mouse.c  iocs_tgraph.c  iocslib.h  mcpy.c  mcpy.h  midi_in.c  midi_in.h  nkflib.c  nkflib.h  ongraph.c  ongraph.h  rcdcheck.c  scdsp.c  scdsp.h  sted_c.h  x68defines.h  x68funcs.c  x68funcs.h  xwin.c  xwin.h  xwin_col.c  xwin_graph.c  xwin_key.c  xwin_mouse.c  (+1 more)
