EXTRA_DIST = rested2m.doc \
             sted207m.his \
             sted_all.hed \
             tuitou.doc \
             sted207/cm64.def \
             sted207/sc55.def \
             sted207/sc55mk2.def \
             sted207/sc88.def \
             sted207/sted2.cnf \
             sted207/sted2.doc \
             sted207/sted2.fon \
             sted207/sted2.his \
             sted207/sted2.hlp \
             sted207/sted2.man \
             sted207/sted207.hed \
             sted207/sted2def.doc
